--- a/_posts/core-samples/2015-3-22-a-test.md
+++ b/_posts/core-samples/2015-3-22-a-test.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 category : test
-tagline: "我的第一个github博客"
+tagline: "鎴戠殑绗竴涓猤ithub鍗氬"
 tags : [ beginner, jekyll, tutorial]
 ---
 
 ##hello world
 
-###中文
+###涓枃娴嬭瘯
