--- a/_posts/2015-3-22-a-test.md
+++ b/_posts/2015-3-22-a-test.md
@@ -11,39 +11,39 @@ tags : [ beginner, jekyll, tutorial]
 
 ##图片
 
-![hello world](./picture/1.jpg)
+![hello world](https://github.com/harry07ss/harry07ss.github.com/raw/master/picture/1.jpg)
 
 
 ##代码
 
-```js
-@Override
-public void onPictureTaken(byte[] data, Camera camera) {
 
-	//save the picture to sdcard
-	File pictureFile = getOutputMediaFile();
-	if (pictureFile == null){
-		Log.d(TAG, "Error creating media file, check storage permissions: ");
-		return;
-	}
 
-	try {
-		FileOutputStream fos = new FileOutputStream(pictureFile);
-		fos.write(data);
-		fos.close();
+	@Override
+	public void onPictureTaken(byte[] data, Camera camera) {
+
+		//save the picture to sdcard
+		File pictureFile = getOutputMediaFile();
+		if (pictureFile == null){
+			Log.d(TAG, "Error creating media file, check storage permissions: ");
+			return;
+		}
+
+		try {
+			FileOutputStream fos = new FileOutputStream(pictureFile);
+			fos.write(data);
+			fos.close();
+			
+			Toast.makeText(this, "Image has been saved to "+pictureFile.getAbsolutePath(), 
+					Toast.LENGTH_LONG).show();
+		} catch (FileNotFoundException e) {
+			Log.d(TAG, "File not found: " + e.getMessage());
+		} catch (IOException e) {
+			Log.d(TAG, "Error accessing file: " + e.getMessage());
+		}
 		
-		Toast.makeText(this, "Image has been saved to "+pictureFile.getAbsolutePath(), 
-				Toast.LENGTH_LONG).show();
-	} catch (FileNotFoundException e) {
-		Log.d(TAG, "File not found: " + e.getMessage());
-	} catch (IOException e) {
-		Log.d(TAG, "Error accessing file: " + e.getMessage());
+		// Restart the preview and re-enable the shutter button so that we can take another picture
+		camera.startPreview();
+		
+		//See if need to enable or not
+		mCaptureButton.setEnabled(true);
 	}
-	
-	// Restart the preview and re-enable the shutter button so that we can take another picture
-	camera.startPreview();
-	
-	//See if need to enable or not
-	mCaptureButton.setEnabled(true);
-}
-```
