--- a/_posts/2015-3-22-a-test.md
+++ b/_posts/2015-3-22-a-test.md
@@ -9,25 +9,20 @@ tags : [ beginner, jekyll, tutorial]
 
 ###中文测试
 
-##图片
-
-![hello world](https://github.com/harry07ss/harry07ss.github.com/raw/master/picture/1.jpg)
-
 
 ##代码
 
-
-
+```java
 	@Override
 	public void onPictureTaken(byte[] data, Camera camera) {
-
+	
 		//save the picture to sdcard
 		File pictureFile = getOutputMediaFile();
 		if (pictureFile == null){
 			Log.d(TAG, "Error creating media file, check storage permissions: ");
 			return;
 		}
-
+	
 		try {
 			FileOutputStream fos = new FileOutputStream(pictureFile);
 			fos.write(data);
@@ -47,3 +42,7 @@ tags : [ beginner, jekyll, tutorial]
 		//See if need to enable or not
 		mCaptureButton.setEnabled(true);
 	}
+```
+
+##公式
+$$E=mc^2$$
